--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,12 +1,11 @@
 <div class="container mx-auto">
-  <h1 class="text-3xl font-bold text-center mt-8 mb-6">ALL Articles</h1>
+  <h1 class="text-3xl font-bold text-center mt-8 mb-6 mx-4">ALL Articles</h1>
 
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-    <% @articles.each do |article| %>
-      <div class="border rounded-lg p-4 shadow-md">
-        <h2 class="text-xl font-semibold mb-2"><%= article.title %></h2>
-        <p class="text-gray-700"><%= article.body %></p>
-      </div>
-    <% end %>
-  </div>
+    <%= render partial: "search/form" %>
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 lg:mx-10">
+      <% @articles.each do |article| %>
+          <%= render article %>
+      <% end %>
+    </div>
 </div>
