--- a/app/views/search/_suggestions.html.erb
+++ b/app/views/search/_suggestions.html.erb
@@ -2,7 +2,7 @@
   <div class="bg-white border border-gray-300 rounded-lg shadow-md w-full absolute z-10">
     <% results.each do |article| %>
       <div class="px-4 py-3 hover:bg-gray-100">
-        <%= link_to article.title, article %>
+        <%= link_to article.title, article, class: 'suggestion-link' %>
       </div>
     <% end %>
   </div>
