--- a/app/views/search/_form.html.erb
+++ b/app/views/search/_form.html.erb
@@ -11,7 +11,7 @@
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
                 </svg>
               </div>
-              <%= form.text_field :query, autocomplete: :off, data: { search_target: 'input', action: "blur->search#hideSuggestions" }, placeholder: 'Search...', class: 'block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500', id: "search-input" %>
+              <%= form.text_field :query, autocomplete: :off, data: { search_target: 'input' }, placeholder: 'Search...', class: 'block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500', id: "search-input" %>
               <div id="suggestions" data-search-target="suggestions" class="relative mt-2 bg-white border border-gray-300 rounded-lg shadow-md w-full absolute z-10 hidden"></div>
             </div>
           </div>
