--- a/app/views/search/recent_searches_by_user.html.erb
+++ b/app/views/search/recent_searches_by_user.html.erb
@@ -1,4 +1,7 @@
   <div class="container mt-4">
+  `  <div>
+      <%= link_to "Back", articles_path, class: "bg-gray-700 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" %>
+    </div>`
     <div class="bg-white shadow-md rounded-lg">
       <div class="px-4 py-3 border-b border-gray-200">
         <h3 class="text-lg font-semibold text-gray-800">Recent Searches by <%= current_user.user_ip %>:</h3>
